# Structure-Aware-Temporal-Graph-RAG-SAT-Graph-RAG-

./: README.md
sat-graph-rag/: .env.example  .gitignore  BASELINE_COMPARISON_PLAN.md  BASELINE_COMPARISON_REPORT.md  COMPARISON_RESULTS.json  CURRENT_STATUS.md  GIT_COMMIT_CHECKLIST.md  METRICS_REPORT.md  MVP_DEMO_RESULTS.md  MVP_PLAN.md  PROPER_COMPARISON_RESULTS.json  README.md  SUPERVISOR_SUMMARY.md  TLR_BENCH_RESULTS.json  pyproject.toml  requirements.txt
sat-graph-rag/data/benchmark/: tlr_bench_v1.json
sat-graph-rag/data/test/: comparison_queries.json  ground_truth_articles.json  proper_comparison_queries.json
sat-graph-rag/docker/: docker-compose.yml
sat-graph-rag/docs/: BENCHMARK_SPECIFICATION.md  DIAGRAMS.md  PRESENTATION.md  slides.html
sat-graph-rag/modal_app/: __init__.py
sat-graph-rag/scripts/: compare_baseline.py  evaluate_benchmark.py  export_graph_for_viz.py  generate_benchmark.py  process_all_amendments.py  reset_database.py  run_api.py  run_ingestion.py  run_mvp_demo.py  run_proper_comparison.py  run_quick_benchmark.py  run_scraper.py  run_verification.py  setup_neo4j.sh  test_retrieval.py  test_temporal_engine.py
sat-graph-rag/src/: __init__.py
sat-graph-rag/src/baseline/: __init__.py  flat_rag.py
sat-graph-rag/src/collection/: __init__.py  fetch_amendments.py  fetch_constitution.py  scraper.py
sat-graph-rag/src/evaluation/: __init__.py  metrics.py
sat-graph-rag/src/graph/: __init__.py  connection.py  loader.py  schema.py  (+1 more)
sat-graph-rag/tests/: __init__.py
sat-graph-rag/visualization/: graph_data.json  index.html
(+29 files in other folders)
